Correction: Suppression du formulaire de réservation ajouté par erreur dans index.html et du fichier form-reservation.js. Le système utilise maintenant uniquement le formulaire existant dans la bannière avec les données structurées.

--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
 
 					<div class="inner columns divided">
 						<div class="span-4-5">
-						  <!-- Form wrapper contenant uniquement le formulaire de contact -->
+						  <!-- Form wrapper contenant les formulaires de contact et réservation -->
 						  <div class="form-wrapper">
 
 						    <!-- Formulaire Contact -->
@@ -326,6 +326,8 @@
 						        </ul>
 						      </form>
 						    </div>
+
+
 
 						  </div>
 						</div>
