--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -601,7 +601,7 @@
         const detailsContainer = document.getElementById('reservation-details')
         detailsContainer.innerHTML = `
 					<div class="detail-item">
-						<span>${formatReservationDetails(data.reservationDetails)}</span>
+						<span>${formatReservationDetails(data)}</span>
 					</div>
 					${
             data.userMessage
@@ -620,66 +620,9 @@
         console.log('Calculating payment for data:', data)
 
         // Utiliser directement le champ total structuré
-        let totalAmount = data.total
+        let totalAmount = data.priceTotal
 
-        // Fallback vers l'ancien système si total n'est pas disponible
-        if (!totalAmount || totalAmount === 0) {
-          console.log(
-            'Total not found in structured data, falling back to parsing'
-          )
-
-          // Pattern 1: "Total: X.XX €" (le vrai total final avec décimales)
-          let totalMatch = data.reservationDetails.match(
-            /Total:\s*([\d\s,]+\.?\d*)\s*€/i
-          )
-          if (totalMatch) {
-            totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-            console.log('Found total with pattern 1:', totalAmount)
-          }
-
-          // Pattern 2: "Total: X €" (le vrai total final sans décimales)
-          if (!totalAmount) {
-            totalMatch = data.reservationDetails.match(
-              /Total:\s*([\d\s,]+)\s*€/i
-            )
-            if (totalMatch) {
-              totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-              console.log('Found total with pattern 2:', totalAmount)
-            }
-          }
-
-          // Pattern 3: Chercher tous les montants et prendre le plus grand
-          if (!totalAmount) {
-            const allAmounts = data.reservationDetails.match(
-              /(\d+(?:[,\s]\d+)*\.?\d*)\s*€/g
-            )
-            if (allAmounts && allAmounts.length > 0) {
-              const amounts = allAmounts.map((match) =>
-                parseFloat(match.replace(/[\s€]/g, '').replace(',', ''))
-              )
-              totalAmount = Math.max(...amounts)
-              console.log(
-                'Found total with pattern 3 (max amount):',
-                totalAmount
-              )
-            }
-          }
-
-          // Pattern 4: "Total des nuits (X) : Y €" (fallback)
-          if (!totalAmount) {
-            totalMatch = data.reservationDetails.match(
-              /Total des nuits\s*\(\d+\)\s*:\s*([\d\s,]+)\s*€/i
-            )
-            if (totalMatch) {
-              totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-              console.log('Found total with pattern 4:', totalAmount)
-            }
-          }
-        } else {
-          console.log('Using structured total:', totalAmount)
-        }
-
-        console.log('Final total amount found:', totalAmount)
+        console.log('Using structured total:', totalAmount)
 
         if (totalAmount && totalAmount > 0) {
           const depositAmount = totalAmount * 0.1
@@ -718,7 +661,7 @@
         } else {
           document.getElementById('payment-amount').textContent =
             'Montant à calculer'
-          console.log('No valid amount found in:', data.reservationDetails)
+          console.log('No valid amount found in structured data')
         }
       }
 
@@ -844,9 +787,69 @@
         return div.innerHTML
       }
 
-      function formatReservationDetails(details) {
-        if (!details) return 'Aucun détail'
-        return details.replace(/\n/g, '<br>')
+      function formatReservationDetails(data) {
+        if (!data) return 'Aucun détail'
+
+        const startDate = new Date(data.startDate)
+        const endDate = new Date(data.endDate)
+
+        const formatDate = (date) => {
+          return date.toLocaleDateString('fr-FR', {
+            day: '2-digit',
+            month: 'long',
+            year: 'numeric'
+          })
+        }
+
+        let details = []
+        details.push(
+          `Dates : ${formatDate(startDate)} au ${formatDate(endDate)} (${
+            data.nbNights
+          } nuits)`
+        )
+
+        if (data.nbChilds > 0) {
+          details.push(
+            `Voyageurs : ${data.nbAdults} adulte${
+              data.nbAdults > 1 ? 's' : ''
+            }, ${data.nbChilds} enfant${data.nbChilds > 1 ? 's' : ''}`
+          )
+        } else {
+          details.push(
+            `Voyageurs : ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}`
+          )
+        }
+
+        details.push('')
+        details.push('Détail du prix :')
+
+        if (data.priceNights > 0) {
+          details.push(
+            `• Total des nuits (${
+              data.nbNights
+            }) : ${data.priceNights.toLocaleString('fr-FR')} €`
+          )
+        }
+
+        if (data.priceClean > 0) {
+          details.push(
+            `• Frais de ménage : ${data.priceClean.toLocaleString('fr-FR')} €`
+          )
+        }
+
+        if (data.priceTax > 0) {
+          details.push(
+            `• Taxes (${data.nbAdults} adulte${
+              data.nbAdults > 1 ? 's' : ''
+            }) : ${data.priceTax.toLocaleString('fr-FR')} €`
+          )
+        }
+
+        if (data.priceTotal > 0) {
+          details.push(`• Total : ${data.priceTotal.toLocaleString('fr-FR')} €`)
+        }
+
+        return details.join('<br>')
       }
     </script>
   </body>
