Correction: Amélioration de la récupération des données structurées dans le Google Apps Script avec logs de débogage et conversion des types de données

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -584,7 +584,10 @@
           console.log('API Response:', JSON.stringify(result, null, 2))
 
           if (result.status === 'success') {
-            console.log('Reservation data received:', JSON.stringify(result.data, null, 2))
+            console.log(
+              'Reservation data received:',
+              JSON.stringify(result.data, null, 2)
+            )
             populateForm(result.data)
             calculatePaymentAmount(result.data)
           } else {
@@ -597,7 +600,10 @@
       }
 
       function populateForm(data) {
-        console.log('populateForm called with data:', JSON.stringify(data, null, 2))
+        console.log(
+          'populateForm called with data:',
+          JSON.stringify(data, null, 2)
+        )
 
         document.getElementById('name').value = data.name || ''
         document.getElementById('email').value = data.email || ''
@@ -805,15 +811,18 @@
       }
 
       function formatReservationDetails(data) {
-        console.log('formatReservationDetails called with data:', JSON.stringify(data, null, 2))
+        console.log(
+          'formatReservationDetails called with data:',
+          JSON.stringify(data, null, 2)
+        )
 
         if (!data) return 'Aucun détail'
 
         const startDate = new Date(data.startDate)
         const endDate = new Date(data.endDate)
 
-        console.log('Parsed dates:', { 
-          startDate: startDate.toString(), 
+        console.log('Parsed dates:', {
+          startDate: startDate.toString(),
           endDate: endDate.toString(),
           startDateValue: data.startDate,
           endDateValue: data.endDate
