--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -837,51 +837,48 @@
         }
 
         let details = []
+        
+        // Dates avec formatage HTML
+        const startDateStr = formatDate(startDate)
+        const endDateStr = formatDate(endDate)
         details.push(
-          `Dates : ${formatDate(startDate)} au ${formatDate(endDate)} (${
-            data.nbNights
-          } nuits)`
+          `<strong>Dates :</strong> <u>${startDateStr}</u> au <u>${endDateStr}</u> (${data.nbNights} nuits)`
         )
 
+        // Voyageurs
         if (data.nbChilds > 0) {
           details.push(
-            `Voyageurs : ${data.nbAdults} adulte${
-              data.nbAdults > 1 ? 's' : ''
-            }, ${data.nbChilds} enfant${data.nbChilds > 1 ? 's' : ''}`
+            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}, ${data.nbChilds} enfant${data.nbChilds > 1 ? 's' : ''}`
           )
         } else {
           details.push(
-            `Voyageurs : ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}`
+            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}`
           )
         }
 
         details.push('')
-        details.push('Détail du prix :')
+        details.push('<strong>Détail du prix :</strong>')
 
         if (data.priceNights > 0) {
           details.push(
-            `• Total des nuits (${
-              data.nbNights
-            }) : ${data.priceNights.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Total des nuits (${data.nbNights}) : ${data.priceNights.toLocaleString('fr-FR')} €`
           )
         }
 
         if (data.priceClean > 0) {
           details.push(
-            `• Frais de ménage : ${data.priceClean.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Frais de ménage : ${data.priceClean.toLocaleString('fr-FR')} €`
           )
         }
 
         if (data.priceTax > 0) {
           details.push(
-            `• Taxes (${data.nbAdults} adulte${
-              data.nbAdults > 1 ? 's' : ''
-            }) : ${data.priceTax.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Taxes (${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}) : ${data.priceTax.toLocaleString('fr-FR')} €`
           )
         }
 
         if (data.priceTotal > 0) {
-          details.push(`• Total : ${data.priceTotal.toLocaleString('fr-FR')} €`)
+          details.push(`&nbsp;&nbsp;&nbsp;&nbsp;• <strong>Total : ${data.priceTotal.toLocaleString('fr-FR')} €</strong>`)
         }
 
         const result = details.join('<br>')
