Update Google Apps Script URL to new deployment

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -837,7 +837,7 @@
         }
 
         let details = []
-        
+
         // Dates avec formatage HTML
         const startDateStr = formatDate(startDate)
         const endDateStr = formatDate(endDate)
@@ -848,11 +848,15 @@
         // Voyageurs
         if (data.nbChilds > 0) {
           details.push(
-            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}, ${data.nbChilds} enfant${data.nbChilds > 1 ? 's' : ''}`
+            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${
+              data.nbAdults > 1 ? 's' : ''
+            }, ${data.nbChilds} enfant${data.nbChilds > 1 ? 's' : ''}`
           )
         } else {
           details.push(
-            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}`
+            `<strong>Voyageurs :</strong> ${data.nbAdults} adulte${
+              data.nbAdults > 1 ? 's' : ''
+            }`
           )
         }
 
@@ -861,24 +865,34 @@
 
         if (data.priceNights > 0) {
           details.push(
-            `&nbsp;&nbsp;&nbsp;&nbsp;• Total des nuits (${data.nbNights}) : ${data.priceNights.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Total des nuits (${
+              data.nbNights
+            }) : ${data.priceNights.toLocaleString('fr-FR')} €`
           )
         }
 
         if (data.priceClean > 0) {
           details.push(
-            `&nbsp;&nbsp;&nbsp;&nbsp;• Frais de ménage : ${data.priceClean.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Frais de ménage : ${data.priceClean.toLocaleString(
+              'fr-FR'
+            )} €`
           )
         }
 
         if (data.priceTax > 0) {
           details.push(
-            `&nbsp;&nbsp;&nbsp;&nbsp;• Taxes (${data.nbAdults} adulte${data.nbAdults > 1 ? 's' : ''}) : ${data.priceTax.toLocaleString('fr-FR')} €`
+            `&nbsp;&nbsp;&nbsp;&nbsp;• Taxes (${data.nbAdults} adulte${
+              data.nbAdults > 1 ? 's' : ''
+            }) : ${data.priceTax.toLocaleString('fr-FR')} €`
           )
         }
 
         if (data.priceTotal > 0) {
-          details.push(`&nbsp;&nbsp;&nbsp;&nbsp;• <strong>Total : ${data.priceTotal.toLocaleString('fr-FR')} €</strong>`)
+          details.push(
+            `&nbsp;&nbsp;&nbsp;&nbsp;• <strong>Total : ${data.priceTotal.toLocaleString(
+              'fr-FR'
+            )} €</strong>`
+          )
         }
 
         const result = details.join('<br>')
