Amélioration visibilité message d'avertissement enfants avec style bannière

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -795,7 +795,7 @@
 
         // Mettre à jour la description pour inclure le message sur les enfants
         sectionDescription.innerHTML =
-          'Vous pouvez nous laisser un message ou nous poser des questions si vous le souhaitez.<br><br><strong style="color: #ef4444;">⚠️ Rappel : les enfants de moins de 8 ans ne sont pas admis.</strong>'
+          'Vous pouvez nous laisser un message ou nous poser des questions si vous le souhaitez.<br><br><div style="background: rgba(255, 193, 7, 0.2); border: 1px solid rgba(255, 193, 7, 0.5); border-radius: 8px; padding: 12px; margin-top: 15px; display: flex; align-items: center; gap: 8px;"><span style="color: #856404; font-size: 16px;">⚠️</span><span style="color: #856404; font-weight: 500;">Rappel : les enfants de moins de 8 ans ne sont pas admis.</span></div>'
 
         let html = ''
 
