--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -170,30 +170,30 @@
         font-size: 14px;
         font-weight: 500;
       }
-             .btn-submit {
-         background: linear-gradient(135deg, #3b82f6, #2563eb);
-         color: white;
-         padding: 16px 30px;
-         border: none;
-         border-radius: 12px;
-         font-size: 18px;
-         font-weight: 600;
-         cursor: pointer;
-         width: 100%;
-         transition: all 0.3s ease;
-         box-shadow: 0 6px 20px rgba(59, 130, 246, 0.3);
-         text-transform: uppercase;
-         letter-spacing: 0.5px;
-         display: flex;
-         align-items: center;
-         justify-content: center;
-         min-height: 55px;
-       }
-       .btn-submit:hover {
-         background: linear-gradient(135deg, #2563eb, #1d4ed8);
-         transform: translateY(-3px);
-         box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
-       }
+      .btn-submit {
+        background: linear-gradient(135deg, #3b82f6, #2563eb);
+        color: white;
+        padding: 16px 30px;
+        border: none;
+        border-radius: 12px;
+        font-size: 18px;
+        font-weight: 600;
+        cursor: pointer;
+        width: 100%;
+        transition: all 0.3s ease;
+        box-shadow: 0 6px 20px rgba(59, 130, 246, 0.3);
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 55px;
+      }
+      .btn-submit:hover {
+        background: linear-gradient(135deg, #2563eb, #1d4ed8);
+        transform: translateY(-3px);
+        box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
+      }
       .btn-submit:disabled {
         background: #9ca3af;
         cursor: not-allowed;
@@ -251,93 +251,93 @@
         font-weight: 500;
       }
 
-             /* Styles pour l'encart de paiement */
-       .payment-card {
-         background: rgba(255, 255, 255, 0.1);
-         border-radius: 16px;
-         padding: 20px 30px;
-         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-         max-width: 600px;
-         margin: 0 auto;
-         backdrop-filter: blur(20px);
-         border: 1px solid rgba(255, 255, 255, 0.3);
-       }
+      /* Styles pour l'encart de paiement */
+      .payment-card {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 16px;
+        padding: 20px 30px;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        margin: 0 auto;
+        backdrop-filter: blur(20px);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+      }
 
-             .payment-card h3 {
-         color: white;
-         font-size: 1.5rem;
-         font-weight: bold;
-         margin-bottom: 20px;
-         text-align: center;
-       }
+      .payment-card h3 {
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-align: center;
+      }
 
-             .payment-breakdown {
-         margin-bottom: 20px;
-       }
+      .payment-breakdown {
+        margin-bottom: 20px;
+      }
 
-             .payment-row {
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         padding: 8px 0;
-         color: white;
-         font-size: 1rem;
-         line-height: 1.3;
-       }
+      .payment-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px 0;
+        color: white;
+        font-size: 1rem;
+        line-height: 1.3;
+      }
 
-             .payment-row.deposit-row {
-         color: #3b82f6;
-         font-weight: 600;
-         font-size: 1.1rem;
-       }
+      .payment-row.deposit-row {
+        color: #3b82f6;
+        font-weight: 600;
+        font-size: 1.1rem;
+      }
 
-             .payment-row.remaining-row {
-         font-weight: 500;
-         border-top: 1px solid rgba(255, 255, 255, 0.3);
-         margin-top: 8px;
-         padding-top: 12px;
-       }
+      .payment-row.remaining-row {
+        font-weight: 500;
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        margin-top: 8px;
+        padding-top: 12px;
+      }
 
-             .progress-bar {
-         width: 100%;
-         height: 8px;
-         background: rgba(255, 255, 255, 0.2);
-         border-radius: 4px;
-         margin: 12px 0;
-         overflow: hidden;
-       }
+      .progress-bar {
+        width: 100%;
+        height: 8px;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 4px;
+        margin: 12px 0;
+        overflow: hidden;
+      }
 
-       .progress-fill {
-         height: 100%;
-         background: #3b82f6;
-         border-radius: 4px;
-         transition: width 0.3s ease;
-       }
+      .progress-fill {
+        height: 100%;
+        background: #3b82f6;
+        border-radius: 4px;
+        transition: width 0.3s ease;
+      }
 
-             .payment-form {
-         border-top: 1px solid rgba(255, 255, 255, 0.3);
-         padding-top: 20px;
-       }
+      .payment-form {
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        padding-top: 20px;
+      }
 
-             .payment-form .form-group {
-         margin-bottom: 15px;
-       }
+      .payment-form .form-group {
+        margin-bottom: 15px;
+      }
 
-       .payment-form label {
-         display: block;
-         color: white;
-         font-weight: 500;
-         margin-bottom: 6px;
-         font-size: 0.9rem;
-       }
+      .payment-form label {
+        display: block;
+        color: white;
+        font-weight: 500;
+        margin-bottom: 6px;
+        font-size: 0.9rem;
+      }
 
-             .payment-disclaimer {
-         text-align: center;
-         color: rgba(255, 255, 255, 0.8);
-         font-size: 0.8rem;
-         margin-top: 12px;
-         line-height: 1.4;
-       }
+      .payment-disclaimer {
+        text-align: center;
+        color: rgba(255, 255, 255, 0.8);
+        font-size: 0.8rem;
+        margin-top: 12px;
+        line-height: 1.4;
+      }
 
       /* Responsive design pour mobile */
       @media (max-width: 768px) {
@@ -410,44 +410,44 @@
           width: 100%;
         }
 
-                 /* Responsive pour l'encart de paiement */
-         .payment-card {
-           padding: 15px 20px;
-           margin: 0 10px;
-           max-width: 100%;
-           width: calc(100% - 20px);
-         }
+        /* Responsive pour l'encart de paiement */
+        .payment-card {
+          padding: 15px 20px;
+          margin: 0 10px;
+          max-width: 100%;
+          width: calc(100% - 20px);
+        }
 
-                 .payment-card h3 {
-           font-size: 1.3rem;
-           margin-bottom: 15px;
-         }
+        .payment-card h3 {
+          font-size: 1.3rem;
+          margin-bottom: 15px;
+        }
 
-                 .payment-row {
-           font-size: 0.9rem;
-           padding: 6px 0;
-         }
+        .payment-row {
+          font-size: 0.9rem;
+          padding: 6px 0;
+        }
 
         .payment-row.deposit-row {
           font-size: 1rem;
         }
 
-                 .progress-bar {
-           margin: 10px 0;
-         }
+        .progress-bar {
+          margin: 10px 0;
+        }
 
-                 .payment-form {
-           padding-top: 15px;
-         }
+        .payment-form {
+          padding-top: 15px;
+        }
 
-                 .payment-form .form-group {
-           margin-bottom: 12px;
-         }
+        .payment-form .form-group {
+          margin-bottom: 12px;
+        }
 
-         .payment-form label {
-           font-size: 0.85rem;
-           margin-bottom: 6px;
-         }
+        .payment-form label {
+          font-size: 0.85rem;
+          margin-bottom: 6px;
+        }
 
         .payment-disclaimer {
           font-size: 0.75rem;
@@ -795,9 +795,15 @@
               </div>
             </div>
           </div>
-        </section>
-      </div>
-    </div>
+                 </section>
+
+         <!-- C O P Y R I G H T //////////////////////////////////////////////////////////////////////////////// -->
+         <div class="copyright">
+           <span>&copy; Calypso Bay | By</span>
+           <a href="https://moriarty-design.fr" target="_blank" rel="noopener" style="font-family: 'Engagement', 'Brush Script MT', cursive; font-size: 2.2em; line-height: 1; margin-left: 0.25em; text-decoration: none; color: inherit;">Moriarty</a>.
+         </div>
+       </div>
+     </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
@@ -1047,33 +1053,31 @@
           console.log('Calculated deposit:', depositAmount)
           console.log('Remaining amount:', remainingAmount)
 
-          // Mettre à jour les éléments du récapitulatif
-          document.getElementById(
-            'total-amount'
-          ).textContent = `${totalAmount.toFixed(2)} €`
-          document.getElementById(
-            'deposit-amount'
-          ).textContent = `${depositAmount.toFixed(2)} €`
-          document.getElementById(
-            'remaining-amount'
-          ).textContent = `${remainingAmount.toFixed(2)} €`
+                     // Mettre à jour les éléments du récapitulatif avec espacement des milliers
+           document.getElementById(
+             'total-amount'
+           ).textContent = `${totalAmount.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})} €`
+           document.getElementById(
+             'deposit-amount'
+           ).textContent = `${depositAmount.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})} €`
+           document.getElementById(
+             'remaining-amount'
+           ).textContent = `${remainingAmount.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})} €`
 
           // Mettre à jour la barre de progression
           const progressFill = document.getElementById('progress-fill')
           const progressPercentage = (depositAmount / totalAmount) * 100
           progressFill.style.width = `${progressPercentage}%`
 
-          // Mettre à jour le texte du bouton avec le montant
-          const buttonText = document.getElementById('button-text')
-          if (buttonText) {
-            const newButtonText = `Payer l'acompte – ${depositAmount.toFixed(
-              2
-            )} €`
-            buttonText.textContent = newButtonText
-            console.log('Button text updated to:', newButtonText)
-          } else {
-            console.error('Button text element not found')
-          }
+                     // Mettre à jour le texte du bouton avec le montant
+           const buttonText = document.getElementById('button-text')
+           if (buttonText) {
+             const newButtonText = `Payer l'acompte – ${depositAmount.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})} €`
+             buttonText.textContent = newButtonText
+             console.log('Button text updated to:', newButtonText)
+           } else {
+             console.error('Button text element not found')
+           }
 
           // Stocker le montant total pour le paiement
           window.totalAmount = totalAmount
@@ -1198,16 +1202,14 @@
           } catch (error) {
             showError(error.message)
             submitButton.disabled = false
-            // Remettre le texte du bouton avec le montant de l'acompte
-            if (window.totalAmount) {
-              const depositAmount = window.totalAmount * 0.1
-              const buttonText = document.getElementById('button-text')
-              if (buttonText) {
-                buttonText.textContent = `Payer l'acompte – ${depositAmount.toFixed(
-                  2
-                )} €`
-              }
-            }
+                         // Remettre le texte du bouton avec le montant de l'acompte
+             if (window.totalAmount) {
+               const depositAmount = window.totalAmount * 0.1
+               const buttonText = document.getElementById('button-text')
+               if (buttonText) {
+                 buttonText.textContent = `Payer l'acompte – ${depositAmount.toLocaleString('fr-FR', {minimumFractionDigits: 2, maximumFractionDigits: 2})} €`
+               }
+             }
           }
         })
 
