--- a/public/index.html
+++ b/public/index.html
@@ -438,6 +438,8 @@
 		<script src="assets/js/gallery.js"></script>
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
+		<!-- Configuration des variables d'environnement -->
+		<script src="assets/js/config-loader.js"></script>
 		<script src="assets/js/banner.js"></script>
 		<script src="assets/js/map.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
