--- a/public/index.html
+++ b/public/index.html
@@ -285,7 +285,7 @@
 					<div class="intro color4">
 						<h2 class="major">📧 Contactez-nous</h2>
 						<p>
-							Pour toute question ou demande d'information, vous pouvez nous écrire via le formulaire de contact. Vous pouvez également échanger
+							Pour toute question, vous pouvez nous écrire via le formulaire. Vous pouvez également échanger
 							avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.
 						</p>
 						<ul class="actions">
