--- a/public/reservation-refusee.html
+++ b/public/reservation-refusee.html
@@ -59,11 +59,10 @@
     <div class="refused-container">
       <div class="refused-card">
         <div class="refused-icon">❌</div>
-        <h1 class="refused-title">Réservation Refusée</h1>
+        <h1 class="refused-title">Demande de Réservation Refusée</h1>
         <p class="refused-message">
-          Nous regrettons de vous informer que votre demande de réservation ne
-          peut être acceptée.<br />
-          Vous recevrez prochainement un email avec plus de détails.
+          La demande de réservation a été refusée avec succès.<br />
+          Le client recevra un email avec plus de détails.
         </p>
         <a href="/" class="btn-home">Retour à l'accueil</a>
       </div>
